the seventh and eighth chapter of the Tailwind course and completing chapter 28 of the Javascript course

--- a/index.html
+++ b/index.html
@@ -3805,6 +3805,36 @@
           <a href="#j33tailwind" class="sessionIndex"
             >جلسه سی و سوم: Functions</a
           >
+          <a href="#productCardProject" class="chapterIndex"
+            >فصل هفتم: تمرین Product Card</a
+          >
+          <a href="#j34tailwind" class="sessionIndex"
+            >جلسه سی و چهارم: ایجاد ساختار کارد</a
+          >
+          <a href="#j35tailwind" class="sessionIndex"
+            >جلسه سی و پنجم: محتوای کارد</a
+          >
+          <a href="#j36tailwind" class="sessionIndex"
+            >جلسه سی و ششم: رنگ ها و سایزها</a
+          >
+          <a href="#j37tailwind" class="sessionIndex"
+            >جلسه سی و هفتم: ایجاد buttonها</a
+          >
+          <a href="#j38tailwind" class="sessionIndex"
+            >جلسه سی و هشتم: پیاده کردن Dark Mode</a
+          >
+          <a href="#customization" class="chapterIndex"
+            >فصل هشتم: Customization</a
+          >
+          <a href="#j39tailwind" class="sessionIndex"
+            >جلسه سی و نهم: Customization - قسمت اول</a
+          >
+          <a href="#j40tailwind" class="sessionIndex"
+            >جلسه چهلم: Customization - قسمت دوم</a
+          >
+          <a href="#j41tailwind" class="sessionIndex"
+            >جلسه چهل و یکم: Customization - قسمت سوم</a
+          >
         </div>
       </aside>
       <main>
@@ -12644,18 +12674,110 @@
                     یعنی می تواند آن کاراکتر هم نباشد.
                   </p>
                   <img src="./Javascript/278_2.png" />
+                  <p>
+                    علامت ? هم مثل * می باشد یعنی کاراکتر قبل از آن می تواند
+                    وجود داشته باشد یا خیر. تفاوت آن با * این است که ? به معنی 0
+                    یا بیشتر نیست و به معنی 0 یا 1 است یعنی یا هست یا نیست.
+                  </p>
+                  <img src="./Javascript/278_3.png" />
+                  <p>
+                    اگر بخواهیم تعداد دقیق یک کاراکتر را مشخص کنیم آنرا داخل
+                    آکلاد می نویسیم.
+                  </p>
+                  <img src="./Javascript/278_4.png" />
+                  <p>
+                    اگر داخل آکلاد بعد از عدد کاما بگذاریم مثل
+                    <span dir="ltr">{2, }</span> یعنی 2 یا بیشتر تا را بگیر.
+                  </p>
+                  <img src="./Javascript/278_5.png" />
+                  <p>
+                    اگر بعد از کاما عدد دوم را هم بدهیم مثل {2,4} یعنی 2-4تا از
+                    آن کاراکتر را بگیر.
+                  </p>
+                  <img src="./Javascript/278_6.png" />
+                </div>
+                <h4 id="j279javascript">
+                  جلسه دویست و هفتاد و نهم: Groups and Ranges
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    می خواهیم داخل یک رجکس گروه بندی کنیم یعنی یک عبارت خاص را
+                    بگیریم.
+                  </p>
+                  <p>
+                    اگر یک رجکس را داخل پرانتز بنویسیم عبارت داخل پرانتز آن یک
+                    گروه خواهد بود. مثلا مثال های زیر باهم یکسان نیستند.
+                  </p>
+                  <img src="./Javascript/279_1.png" />
+                  <img src="./Javascript/279_2.png" />
+                  <p>
+                    می خواهیم رجکسی بنویسیم که عبارت هایی را بگیرد که آن عبارت
+                    با Hello شروع شده و با Ali تمام می شود و مهم نیست بین آنها
+                    چند کاراکتر باشد.
+                  </p>
+                  <img src="./Javascript/279_3.png" />
+                  <p>
+                    به عنوان مثالی دیگر می خواهیم کلماتی را بگیریم که حرف اول
+                    آنها M یا V یا S باشد و بقیه کلمات ilad باشد برای اینکار آن
+                    3 حرف را داخل براکت می نویسیم.
+                  </p>
+                  <img src="./Javascript/279_4.png" />
+                  <p>
+                    می توانیم داخل براکت A-Z بنویسیم یعنی حرف اول، هر حرف
+                    Capitalی می تواند باشد.
+                  </p>
+                  <img src="./Javascript/279_5.png" />
+                  <p>می توانیم داخل براکت a-z و A-Z را بنویسم.</p>
+                  <img src="./Javascript/279_6.png" />
+                  <p>همچنین می توانیم اعداد را هم قرار دهیم مثل 9-0</p>
+                  <img src="./Javascript/279_7.png" />
+                  <p>
+                    اگر از علامت ^ داخل براکت استفاده کنیم یعنی هرچیزی بغیر از
+                    عبارت داخل براکت باشد.
+                  </p>
+                  <img src="./Javascript/279_8.png" />
+                </div>
+                <h4 id="j280javascript">جلسه دویست و هشتادم: Flags</h4>
+                <div class="sessionContent">
+                  <p>
+                    گفتیم رجکس را بین دو اسلش(//) می نویسیم و Flags را پس از
+                    اسلش دوم رجکس می نویسیم.
+                  </p>
+                  <p>
+                    فلگ g یه global یعنی هرچیزی که با رجکس مطابقت داشت را بگیر.
+                    اگر فلگ g نباشد اولین عبارت که با رجکس مطابقت داشت را می
+                    گیرد و بقیه متن را دیگر نمی گردد.
+                  </p>
+                  <img src="./Javascript/280_1.png" />
+                  <img src="./Javascript/280_2.png" />
+                  <p>
+                    فلگ i یعنی case insensetive یعنی به حروف کوچک و بزرگ حساس
+                    نباش.
+                  </p>
+                  <img src="./Javascript/280_3.png" />
+                  <p>
+                    فلگ m یا multiline یعنی در هر خط رجکس را چک کن و تطبیق بده.
+                  </p>
+                  <img src="./Javascript/280_4.png" />
+                  <img src="./Javascript/280_5.png" />
+                </div>
+                <h4 id="j281javascript">
+                  جلسه دویست و هشتاد و یکم: متدهای test و replace
+                </h4>
+                <div class="sessionContent">
+                  <p>می خواهیم از رجکس ها داخل JS استفاده کنیم.</p>
+                  <p>
+                    بعنوان مثال می خواهیم یک ایمیل را طوری که می خواهیم باشد
+                    اعتبارسنجی کنیم.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
           <div id="gitGithubGitlabCourse">
-            <h2 id="gitGithubGitlab">
-              git - Github - Gitlab
-            </h2>
+            <h2 id="gitGithubGitlab">git - Github - Gitlab</h2>
             <div class="sessions">
-              <h4 id="j1gitGithubGitlab">
-                جلسه اول: معرفی دوره
-              </h4>
+              <h4 id="j1gitGithubGitlab">جلسه اول: معرفی دوره</h4>
               <div class="sessionContent">
                 <p>
                   هر زبان برنامه نویسی که کار می کنیم به گیت نیاز داریم و باید
@@ -12762,8 +12884,8 @@
                 <p>دستور clear هم صفحه گیت را پاک می کند.</p>
                 <p>
                   پس از نصب گیت ابتدا اطلاعاتمان را config می کنیم تا گیت بعدها
-                  بداند کدها را چه کسی تغییرداده است. اطلاعاتمان را با استفاده از
-                  دستورات زیر config می کنیم.
+                  بداند کدها را چه کسی تغییرداده است. اطلاعاتمان را با استفاده
+                  از دستورات زیر config می کنیم.
                 </p>
                 <p dir="ltr">git config --global user.name "Ali Ghaffari"</p>
                 <p dir="ltr">
@@ -13869,6 +13991,64 @@
                     ما قرار می دهد برای ساخت کلاس custom خودمان استفاده کنیم.
                   </p>
                   <img src="./Tailwind/33_1.png" />
+                </div>
+              </div>
+            </div>
+            <div class="chapter">
+              <h3 id="productCardProject">فصل هفتم: تمرین Product Card</h3>
+              <div class="sessions">
+                <h4 id="j34tailwind">جلسه سی و چهارم: ایجاد ساختار کارد</h4>
+                <div class="sessionsContent">
+                  <p>می خواهیم به کمک تیلویند یک کارد بسازیم.</p>
+                </div>
+                <h4 id="j35tailwind">جلسه سی و پنجم: محتوای کارد</h4>
+                <h4 id="j36tailwind">جلسه سی و ششم: رنگ ها و سایزها</h4>
+                <h4 id="j37tailwind">جلسه سی و هفتم: ایجاد buttonها</h4>
+                <div class="sessionsContent">
+                  <p>
+                    برای ایجاد باتن با عکس قلب از سایت svgrepo.com کد svg مربوط
+                    به عکس قلب را کپی می کنیم و داخل تگ باتن آنرا paste می کنیم.
+                  </p>
+                </div>
+                <h4 id="j38tailwind">جلسه سی و هشتم: پیاده کردن Dark Mode</h4>
+              </div>
+            </div>
+            <div class="chapter">
+              <h3 id="customization">فصل هشتم: Customization</h3>
+              <div class="sessions">
+                <h4 id="j39tailwind">
+                  جلسه سی و نهم: Customization - قسمت اول
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    بعضی وقت ها می خواهیم یکسری تغییرات در تیلویند ایجاد کنیم
+                    مثلا برای break pointها نمی خواهیم sm برابر 480px باشد و می
+                    خواهیم 580px باشد. یا رنگ ها را می خواهیم تغییر دهیم و یا
+                    رنگ جدید اضافه کنیم و...
+                  </p>
+                  <p>
+                    برای اینکار در قسمت Customization داکیومنت تیلویند به قسمت
+                    Configuration می رویم و طبق گفته آن عمل می کنیم.
+                  </p>
+                  <p>
+                    برای Customization از آیتم theme فایل tailwind.config.js
+                    استفاده می کنیم.
+                  </p>
+                  <img src="./Tailwind/39_1.png" />
+                </div>
+                <h4 id="j40tailwind">جلسه چهلم: Customization - قسمت دوم</h4>
+                <div class="sessionContent">
+                  <p>
+                    می توانیم break pointها را هم به کمک آیتم screens تغییر دهیم
+                  </p>
+                </div>
+                <h4 id="j41tailwind">
+                  جلسه چهل و یکم: Customization - قسمت سوم
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    می توانیم ابعاد جدید را هم به کمک آیتم spacing اضافه کنیم.
+                  </p>
                 </div>
               </div>
             </div>
