the tenth chapter of the Tailwind course and completing chapter 28 of the Javascript course

--- a/index.html
+++ b/index.html
@@ -3863,6 +3863,21 @@
           <a href="#j50tailwind" class="sessionIndex"
             >جلسه پنجاهم: Theme Variables</a
           >
+          <a href="#appleStoreProject" class="chapterIndex"
+            >فصل دهم: پروژه سایت فروشگاهی</a
+          >
+          <a href="#j51tailwind" class="sessionIndex"
+            >جلسه پنجاه و یکم: راه اندازی ساختار اولیه پروژه و فونت ها</a
+          >
+          <a href="#j52tailwind" class="sessionIndex"
+            >جلسه پنجاه و دوم: نوبار بالای سایت و کار با فیگما</a
+          >
+          <a href="#j53tailwind" class="sessionIndex"
+            >جلسه پنجاه و سوم: نحوه اکسپورت عکس و svg در فیگما</a
+          >
+          <a href="#j54tailwind" class="sessionIndex"
+            >جلسه پنجاه و چهارم: پیاده کردن header پروژه</a
+          >
         </div>
       </aside>
       <main>
@@ -12798,6 +12813,89 @@
                     بعنوان مثال می خواهیم یک ایمیل را طوری که می خواهیم باشد
                     اعتبارسنجی کنیم.
                   </p>
+                  <p>
+                    1- ایمیل می تواند با a-z و A-Z و 9-0 و آندرلاین و نقطه شروع
+                    شود(اول از علامت ^ استفاده می کنیم سپس w\ و .\ را داخل براکت
+                    می نویسیم)
+                  </p>
+                  <p>
+                    2- حتما باید یکی و بیشتر باشند(از علامت + استفاده می کنیم)
+                  </p>
+                  <p>3- حتما باید @ باشد(از علامت @ استفاده می کنیم)</p>
+                  <p>
+                    4- پس از @ فقط حروف انگلیسی باشد و از 3 تا 8 حرف باشد(داخل
+                    براکت a-z و A-Z را نوشته و پس از آن داخل آکلاد {3,8} را می
+                    نویسیم)
+                  </p>
+                  <p>5- سپس حتما نقطه باشد(.\ را می نویسیم)</p>
+                  <p>
+                    6- پس از نقطه 2 تا 3 حرف انگلیسی باشد(داخل براکت a-z و A-Z
+                    را نوشته و پس از آن داخل آکلاد {2,3} را می نویسیم و آخر آن
+                    هم علامت $ را قرار می دهیم یعنی تمام شود)
+                  </p>
+                  <p>حال رجکس اعتبارسنجی ایمیل را نوشتیم.</p>
+                  <img src="./Javascript/281_1.png" />
+                  <p>
+                    برای استفاده از رجکس در JS آنرا داخل یک متغیر ذخیره می کنیم.
+                  </p>
+                  <p>
+                    سپس متد ()test را به آن متغیر chaining می کنیم و ایمیل
+                    موردنظر را بصورت String داخل پرانتز ()test می نویسیم که true
+                    یا false می دهد.
+                  </p>
+                  <img src="./Javascript/281_2.png" />
+                  <p>متد ()replace هم جایگزین می کند.</p>
+                  <p>
+                    فرض کنید یک رجکس بنویسیم که شماره های 11 رقمی که با 09 شروع
+                    می شوند را بگیرد.
+                  </p>
+                  <img src="./Javascript/281_3.png" />
+                  <p>
+                    حال می خواهیم در یک متن شماره های تلفن را به کمک رجکس بالا
+                    بگیرد و بجای آنها 11تا * قرار دهد. برای اینکار از متد
+                    ()replace استفاده می کنیم.
+                  </p>
+                  <img src="./Javascript/281_4.png" />
+                </div>
+                <h4 id="j282javascript">
+                  جلسه دویست و هشتاد و دوم: متدهای match و exec
+                </h4>
+                <div class="sessionContent">
+                  <p>برای پیدا کردن یک عبارت از متد ()match استفاده می کنیم.</p>
+                  <p>
+                    به این صورت که اول رجکس را می نویسیم سپس آن رجکس را داخل
+                    پراتز ()match قرار داده و به متغیر شامل متن chaining می کنیم
+                    که نتیجه را بصورت یک آرایه می دهد.
+                  </p>
+                  <img src="./Javascript/282_1.png" />
+                  <p>
+                    اگر فلگ g را در رجکس قرار ندهیم فقط اولین شماره را برمی
+                    گرداند.
+                  </p>
+                  <img src="./Javascript/282_2.png" />
+                  <p>متد ()exec از بقیه متدها جدیدتر است.</p>
+                  <p>
+                    در این متد برعکس متد ()match متن را داخل پرانتز ()exec نوشته
+                    و آنرا به رجکس chaining می کنیم.
+                  </p>
+                  <p>
+                    اما این متد فقط یک مورد را برمی گرداند فرقی نمی کند فلگ g را
+                    در رجکس نوشته باشیم یا خیر.
+                  </p>
+                  <img src="./Javascript/282_3.png" />
+                  <img src="./Javascript/282_4.png" />
+                  <p>
+                    در این روش می توانیم گروهبندی کنیم(قسمتی از رجکس را داخل
+                    پرانتز قرار دهیم) و به کمک < >? برای گروه اسم تعیین کنیم.
+                  </p>
+                  <img src="./Javascript/282_5.png" />
+                  <img src="./Javascript/282_6.png" />
+                  <p>
+                    می توانیم رجکس اعتبارسنجی را از گوگل هم درآورده و استفاده
+                    کنیم مثلا:
+                  </p>
+                  <p dir="ltr">regex validation for email</p>
+                  <p dir="ltr">regex validation for Iran phone number</p>
                 </div>
               </div>
             </div>
@@ -14160,8 +14258,8 @@
                   </p>
                   <img src="./Tailwind/44_1.png" />
                   <p>
-                    یا در تگ input هم رنگ placeholder را از رنگ متن با opacity-50
-                    ارث بری می کند.
+                    یا در تگ input هم رنگ placeholder را از رنگ متن با
+                    opacity-50 ارث بری می کند.
                   </p>
                   <img src="./Tailwind/44_2.png" />
                 </div>
@@ -14267,6 +14365,87 @@
                   <img src="./Tailwind/50_1.png" />
                   <img src="./Tailwind/50_2.png" />
                 </div>
+              </div>
+            </div>
+            <div class="chapter">
+              <h3 id="appleStoreProject">فصل دهم: پروژه سایت فروشگاهی</h3>
+              <div class="sessions">
+                <h4 id="j51tailwind">
+                  جلسه پنجاه و یکم: راه اندازی ساختار اولیه پروژه و فونت ها
+                </h4>
+                <div class="sessionsContent">
+                  <p>
+                    می خواهیم به عنوان پروژه یک سایت فروشگاهی را به کمک تیلویند
+                    طراحی کنیم
+                  </p>
+                  <p>
+                    به گیت هاب milad-azami رفته و فایل zip پروژه
+                    apple-store-base را دانلود کرده و آنرا Extract می کنیم.
+                  </p>
+                  <p>
+                    سپس فولدر apple-store-base را با VSCode باز کرده و در
+                    ترمینال npm install را وارد می کنیم تا dependencyها را نصب
+                    کند.
+                  </p>
+                  <p>
+                    اسکریپت dev برای build گرفتن از کلاس های تیلویند به
+                    package.json اضافه شده است پس دستور npm run dev را می زنیم.
+                  </p>
+                  <p>
+                    تمام فونت های لازم در فایل font.css تعریف شده و به فایل
+                    index.html لینک شده است و داخل فایل input.css هم فونت Yekan
+                    را به تیلویند اضافه کرده ایم.
+                  </p>
+                  <p>
+                    در فایل font.css لینک Figma مربوط به طرح نهایی پروژه قرار
+                    داده شده است.
+                  </p>
+                </div>
+                <h4 id="j52tailwind">
+                  جلسه پنجاه و دوم: نوبار بالای سایت و کار با فیگما
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    می خواهیم اطلاعات را از طرح فیگما دربیاوریم. مثلا رنگ و
+                    ابعاد المان x چقدر باشد و...
+                  </p>
+                  <p>
+                    روی هر المان کلیک کنیم در پنجره سمت راست اطلاعات مربوط به آن
+                    را می دهد.
+                  </p>
+                  <p>
+                    اول حالت موبایل را طراحی می کنیم سپس اندازه های مربوط به
+                    دسکتاپ را می دهیم. خود تیلویند هم mobile first است.
+                  </p>
+                </div>
+                <h4 id="j53tailwind">
+                  جلسه پنجاه و سوم: نحوه اکسپورت عکس و svg در فیگما
+                </h4>
+                <div class="sessionContent">
+                  <p>
+                    اگر روی یک آیکن دابل کلیک کنیم در پنجره سمت راست گزینه
+                    export ظاهر می شود که با انتخاب svg در فیلد دراپ داون، آن
+                    آیکن را بصورت svg دانلود می کنیم و داخل فولدر svg داخل فولدر
+                    assets می ریزیم.
+                  </p>
+                  <p>
+                    برای عکس ها هم png را انتخاب کرده و دانلود می کنیم. عکس های
+                    حالت دسکتاپ فیگما را دانلود می کنیم تا کیفیت عکس ها در حالت
+                    دسکتاپ سایت پایین نباشد.
+                  </p>
+                  <p>
+                    برای کم کردن حجم عکس از سایت squoosh.app استفاده می کنیم. در
+                    این سایت فرمت عکس را به WebP. تغییر می دهیم و با انتخاب
+                    میزان Quality حجم عکس را کم می کنیم.
+                  </p>
+                  <p>
+                    همه عکس ها را از فیگما export کرده و داخل فولدر images داخل
+                    فولدر assets می ریزیم.
+                  </p>
+                </div>
+                <h4 id="j54tailwind">
+                  جلسه پنجاه و چهارم: پیاده کردن header پروژه
+                </h4>
               </div>
             </div>
           </div>
